--- a/src/GUI/mipsGUI.form
+++ b/src/GUI/mipsGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.mipsGUI">
-  <grid id="27dc6" binding="mipsPanel" layout-manager="GridLayoutManager" row-count="3" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mipsPanel" layout-manager="GridLayoutManager" row-count="4" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="893" height="400"/>
+      <xy x="20" y="20" width="927" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -140,6 +140,38 @@
           </component>
         </children>
       </scrollpane>
+      <component id="9cced" class="javax.swing.JTextField" binding="memory">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="de593" class="javax.swing.JLabel" binding="memoryLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="memory"/>
+        </properties>
+      </component>
+      <component id="79b8f" class="javax.swing.JLabel" binding="writeBackLabel">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="write Back"/>
+        </properties>
+      </component>
+      <component id="2cf70" class="javax.swing.JTextField" binding="writeBack">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
